# mycroft-precise

./: .gitignore  README.md  deptree.txt  pyproject.toml  test.py
precise/: functions.py  model.py  network_runner.py  params.py  runner.py  util.py  vectorization.py
precise/scripts/: convert.py  listen.py  simulate.py  train.py  train_generated.py  train_sampled.py
test/scripts/: test_engine.py
